--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,38 @@
-// Начните писать стили здесь
+//global values
+@import "./global/variables.scss";
+@import "./global/styles-global.scss";
+@import "./global/mixins.scss";
+
+//fonts
+@import "./global/fonts.scss";
+@import "./global/block-container.scss";
+
+//blocks
+@import "./blocks/page.scss";
+
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu-toggle.scss";
+@import "./blocks/header-nav.scss";
+@import "./blocks/promo.scss";
+@import "./blocks/main-link.scss";
+@import "./blocks/program.scss";
+@import "./blocks/workflow.scss";
+@import "./blocks/demo.scss";
+@import "./blocks/demo-cat.scss";
+@import "./blocks/demo-slider.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/footer-nav.scss";
+@import "./blocks/footer-logo.scss";
+@import "./blocks/social.scss";
+@import "./blocks/academy__logo.scss";
+
+@import "./blocks/product.scss";
+@import "./blocks/additives.scss";
+@import "./blocks/stock.scss";
+
+@import "./blocks/main-form.scss";
+@import "./blocks/form.scss";
+
+
