--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -82,7 +82,7 @@
     width: 18px;
     height: 14px;
     content: "";
-    background-image: url("../../img/svg/form_ok.svg");
+    background-image: url("../img/svg/form_ok.svg");
   }
 }
 
