--- a/source/sass/blocks/workflow.scss
+++ b/source/sass/blocks/workflow.scss
@@ -1,12 +1,30 @@
 .workflow__list {
+  display: grid;
   counter-reset: li;
 
   @include reset-list();
 }
 
+@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+  .workflow__list {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 37px;
+    column-gap: 23%;
+  }
+}
+
+@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+  .workflow__list {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 37px;
+    column-gap: 23%;
+  }
+}
+
 .workflow__item {
   position: relative;
   display: flex;
+  flex-direction: row;
   width: 100%;
 
   &::before {
@@ -34,5 +52,12 @@
     width: 150px;
     padding: 0;
     margin: 0;
+  }
+}
+
+@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+  .workflow__item {
+    flex-direction: column;
+    height: 280px;
   }
 }
