--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,12 +1,18 @@
+//colors
 $color__green: #68b738;
 $color__deep-green: #5eaa2f;
-
 $color__white: #ffffff;
-
 $color__black: #000000;
 $color__light-black: #111111;
-
 $color__grey: #f2f2f2;
 $color__deep-grey: #eaeaea;
 $color__dark-grey: #444444;
 $color__light-grey: #cdcdcd;
+
+//viewport width
+$tablet-width: 768px;
+$desktop-width: 1440px;
+
+//fonts
+$font__main: "Oswald", sans-serif;
+$font__standard: "Arial", sans-serif;
