--- a/source/sass/blocks/demo-cat.scss
+++ b/source/sass/blocks/demo-cat.scss
@@ -1,3 +1,4 @@
+
 .demo-cat__title {
   color: $color__black;
 }
@@ -7,16 +8,32 @@
 }
 
 .demo-cat__list {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 
   @include reset-list();
+}
+
+@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+  .demo-cat__list {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .demo-cat__item {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.demo-cat__item--wide {
+  grid-column: 1 / -1;
+}
+
+@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+  .demo-cat__item--wide {
+    grid-column: 3;
+  }
 }
 
 .demo-cat__importance {
