--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -14,10 +14,21 @@
   @include reset-list();
 }
 
+@media (min-width: $tablet_width) {
+  .header-nav__list {
+    position: static;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 35px;
+    margin-left: auto;
+    width: 57.3%;
+    opacity: 1;
+  }
+}
+
 .header-nav__link {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
+  width: min-content;
   color: $color__black;
   text-transform: uppercase;
   text-decoration: none;
