--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,7 +1,17 @@
 .page__body {
+  display: flex;
+  min-width: 320px;
+  min-height: 100vh;
+  flex-direction: column;
   margin: 0;
   padding: 0;
-  background-color: $color__white;
+/*  background-color: $color__white;*/
   font-family: "Oswald", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
   font-weight: 400;
+}
+
+.page__main {
+  flex: 1;
 }
