--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -2,13 +2,23 @@
   background-color: $color__grey;
 }
 
+@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+  .program {
+    padding-right: 350px;
+  }
+}
+
 .program__title {
   position: relative;
   display: flex;
+  padding-left: 60px;
   align-items: center;
   text-transform: uppercase;
 
   &::before {
+    position: absolute;
+    top: 20%;
+    left: 0;
     display: block;
     width: 50px;
     height: 50px;
@@ -20,7 +30,7 @@
 
 .program__title--slim::after {
   position: absolute;
-  top: 0;
+  top: 20%;
   left: 0;
   display: block;
   width: 36px;
@@ -38,6 +48,22 @@
   height: 28px;
   background-image: url("../../img/svg/icon_cat-pro.svg");
   content: "";
+}
+
+@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+  .program__title::before {
+/*    width: 200px;
+    height: 200px;*/
+    top: 50px;
+    left: 120%;
+  }
+}
+@media (min-width: $tablet_width) and (max-width: $desktop-width){
+  .program__title--slim::after,
+  .program__title--fat::after {
+    top: 50px;
+    left: 120%;
+  }
 }
 
 .program__description {
