--- a/source/sass/global/block-container.scss
+++ b/source/sass/global/block-container.scss
@@ -1,4 +1,19 @@
 .container {
-  width: 280px;
+  min-width: 320px;
+  padding: 0 20px;
   margin: 0 auto;
+  box-sizing: border-box;
+}
+
+@media (min-width: $tablet-width) {
+  .container {
+    padding: 0 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .container {
+    width: $desktop-width;
+    padding: 0 110px;
+  }
 }
