--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,20 +13,23 @@
 @import "./blocks/logo.scss";
 @import "./blocks/menu-toggle.scss";
 @import "./blocks/header-nav.scss";
+@import "./blocks/promo-outer.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/main-link.scss";
 @import "./blocks/program.scss";
 @import "./blocks/workflow.scss";
 @import "./blocks/demo.scss";
 @import "./blocks/demo-cat.scss";
-@import "./blocks/demo-slider.scss";
+@import "./blocks/slider-images.scss";
+@import "./blocks/control";
 @import "./blocks/footer.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/footer-nav.scss";
 @import "./blocks/footer-logo.scss";
 @import "./blocks/social.scss";
-@import "./blocks/academy__logo.scss";
+@import "blocks/academy-logo";
 @import "./blocks/product.scss";
+@import "./blocks/product-block.scss";
 @import "./blocks/additives.scss";
 @import "./blocks/stock.scss";
 @import "./blocks/main-form.scss";
