--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -65,19 +65,18 @@
     background: $color__white;
     border: 1px solid $color__light-grey;
     border-radius: 50%;
-    filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.16));
+    filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.16));
+  }
 
-    &::after {
-      position: absolute;
-      top: 13px;
-      left: 13px;
-      content: "";
-      width: 6px;
-      height: 6px;
-      background-color: $color__green;
-      border-radius: 50%;
-    }
-
+  &::after {
+    position: absolute;
+    top: 13px;
+    left: 13px;
+    content: "";
+    width: 6px;
+    height: 6px;
+    background-color: $color__green;
+    border-radius: 50%;
   }
 }
 
