--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -35,7 +35,7 @@
   display: block;
   width: 36px;
   height: 50px;
-  background-image: url("../../img/svg/icon_cat-slim.svg");
+  background-image: url("../img/svg/icon_cat-slim.svg");
   content: "";
 }
 
@@ -46,7 +46,7 @@
   display: block;
   width: 67px;
   height: 28px;
-  background-image: url("../../img/svg/icon_cat-pro.svg");
+  background-image: url("../img/svg/icon_cat-pro.svg");
   content: "";
 }
 
