--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -5,6 +5,13 @@
 @media (min-width: $tablet_width) and (max-width: $desktop-width) {
   .program {
     padding-right: 350px;
+    height: 370px;
+  }
+}
+
+@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+  .program {
+    padding-right: 350px;
   }
 }
 
