--- a/source/sass/blocks/slider-images.scss
+++ b/source/sass/blocks/slider-images.scss
@@ -6,3 +6,15 @@
   display: flex;
   justify-content: center;
 }
+@media (min-width: $tablet-width) {
+  .slider-images__image--fat {
+    display: none;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .slider-images__image--static {
+    display: none;
+  }
+}
+
