--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,7 @@
 @import "./blocks/footer.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/footer-nav.scss";
+@import "./blocks/footer-inner.scss";
 @import "./blocks/footer-logo.scss";
 @import "./blocks/social.scss";
 @import "blocks/academy-logo";
