--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,35 @@
 .contacts {
   display: flex;
+  column-gap: 10%;
   align-items: center;
   justify-content: space-between;
 }
+
+@media (min-width: $tablet-width) {
+  .contacts {
+    height: 200px;
+  }
+}
+
+.contacts__title {
+  width: 50%;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__title {
+    width: 22%;
+    text-align: left;
+  }
+}
+
+.contacts__address {
+  width: 50%;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__address {
+    width: 21%;
+    text-align: right;
+  }
+}
+
