--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -9,7 +9,7 @@
   .promo {
     align-items: flex-start;
     width: 53.9%;
-    height: 400px;
+    height: 800px;
     padding-top: 30px;
     margin: 0 auto 0 0;
   }
@@ -50,8 +50,8 @@
 @media (min-width: $tablet_width) {
   .promo__image {
     position: absolute;
-    bottom: 0;
-    left: 40%;
+    top: 20%;
+    left: 50%;
     z-index: 1;
   }
 }
