--- a/source/sass/blocks/footer-inner.scss
+++ b/source/sass/blocks/footer-inner.scss
@@ -1,7 +1,15 @@
 @media (min-width: $tablet-width) {
   .footer-inner {
     display: flex;
-    height: 147px;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .footer-inner {
+    display: flex;
+    height: 148px;
     align-items: center;
     justify-content: space-between;
   }
