--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,17 +16,20 @@
 @import "./blocks/promo-outer.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/main-link.scss";
+@import "./blocks/health-programs.scss";
 @import "./blocks/program.scss";
 @import "./blocks/workflow.scss";
 @import "./blocks/demo.scss";
+@import "./blocks/demo-inner.scss";
 @import "./blocks/demo-cat.scss";
 @import "./blocks/slider-images.scss";
 @import "./blocks/control";
 @import "./blocks/footer.scss";
+@import "./blocks/contacts-outer.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/footer-nav.scss";
-@import "./blocks/footer-inner.scss";
 @import "./blocks/footer-logo.scss";
+@import "./blocks/footer-inner.scss";
 @import "./blocks/social.scss";
 @import "blocks/academy-logo";
 @import "./blocks/product.scss";
