--- a/source/sass/blocks/main-link.scss
+++ b/source/sass/blocks/main-link.scss
@@ -1,5 +1,6 @@
 .main-link {
   display: flex;
+  width: 100%;
   justify-content: center;
   align-items: center;
   background-color: $color__green;
@@ -8,6 +9,7 @@
 
   @include link(white);
 }
+
 
 .main-link--discreet {
   background-color: $color__grey;
