--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -1,17 +1,20 @@
 .program {
   background-color: $color__grey;
+  height: 260px;
+  row-gap: 20px;
 }
 
-@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+@media (min-width: $tablet-width) and (max-width: $desktop-width) {
   .program {
     padding-right: 350px;
-    height: 370px;
+    height: 372px;
   }
 }
 
-@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+@media (min-width: $desktop-width) {
   .program {
-    padding-right: 350px;
+    width: 570px;
+    height: 374px;
   }
 }
 
@@ -42,7 +45,7 @@
   display: block;
   width: 36px;
   height: 50px;
-  background-image: url("../img/svg/icon_cat-slim.svg");
+  background-image: url("../../img/svg/icon_cat-slim.svg");
   content: "";
 }
 
@@ -53,24 +56,43 @@
   display: block;
   width: 67px;
   height: 28px;
-  background-image: url("../img/svg/icon_cat-pro.svg");
+  background-image: url("../../img/svg/icon_cat-pro.svg");
   content: "";
 }
 
-@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+@media (min-width: $desktop-width) {
+  .program__title {
+    padding-left: 90px;
+  }
+}
+
+@media (min-width: $tablet-width) and (max-width: $desktop-width) {
   .program__title::before {
     /*width: 200px;
     height: 200px;*/
-    top: 50px;
+    top: 20px;
+    left: 120%;
+  }
+
+  .program__title--slim::after,
+  .program__title--fat::after {
+    top: 20px;
     left: 120%;
   }
 }
 
-@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+@media (min-width: $desktop-width) {
+  .program__title::before {
+    /*width: 200px;
+    height: 200px;*/
+    top: -20px;
+    left: 10px;
+  }
+
   .program__title--slim::after,
   .program__title--fat::after {
-    top: 50px;
-    left: 120%;
+    top: -20px;
+    left: 10px;
   }
 }
 
