--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -5,7 +5,8 @@
   column-gap: 10%;
 }
 
-/*@media (min-width: $tablet-width) {
+/*Разобраться при стилизации
+  @media (min-width: $tablet-width) {
   .contacts {
     gap: 38.5%;
   }
