--- a/source/sass/blocks/additive-outer.scss
+++ b/source/sass/blocks/additive-outer.scss
@@ -1,3 +1,9 @@
+.additive-outer {
+  border-bottom: 1px solid #ebebeb;
+  border-top: 1px solid #ebebeb;
+  padding-bottom: 20px;
+}
+
 @media (min-width: $tablet-width) {
   .additive-outer {
     border: 1px solid $color__light-grey;
