--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,8 +32,10 @@
 @import "./blocks/footer-inner.scss";
 @import "./blocks/social.scss";
 @import "./blocks/academy-logo.scss";
+@import "./blocks/catalog.scss";
 @import "./blocks/catalog-inner.scss";
 @import "./blocks/product.scss";
+@import "./blocks/product-block-outer.scss";
 @import "./blocks/product-block.scss";
 @import "blocks/additives.scss";
 @import "blocks/additive-outer.scss";
