--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,8 +1,8 @@
-@media (min-width: $tablet-width) and (max-width: $desktop-width) {
+/*@media (min-width: $tablet-width) and (max-width: $desktop-width) {
   .product {
     padding: 34px 36px 39px 36px;
   }
-}
+}*/
 
 .product__button {
   grid-column: 1 / -1;
