--- a/source/sass/blocks/additive.scss
+++ b/source/sass/blocks/additive.scss
@@ -4,6 +4,20 @@
   margin-bottom: 20px;
 }
 
+@media (min-width: $tablet-width) {
+  .additive {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .additive {
+    width: 270%;
+  }
+}
+
 .additive__list {
   @include reset-list();
 }
@@ -18,11 +32,5 @@
 .additive__item {
   display: flex;
   justify-content: space-between;
-}
-
-@media (min-width: $tablet-width) {
-  .additive__item {
-
-  }
 }
 
