--- a/source/sass/blocks/catalog-inner.scss
+++ b/source/sass/blocks/catalog-inner.scss
@@ -7,5 +7,17 @@
     grid-template-columns: repeat(2, 1fr);
     column-gap: 7.8%;
     row-gap: 141px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog-inner {
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 5.5%;
+    row-gap: 143px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
