накидывает шрифты на главной

--- a/source/sass/blocks/main-link.scss
+++ b/source/sass/blocks/main-link.scss
@@ -6,7 +6,11 @@
   background-color: $color__green;
   text-transform: uppercase;
   border: none;
+  padding-top: 13px;
+  padding-bottom: 13px;
 
+  @include adaptive-font(14,20);
+  @include line-height(14,18,20,20);
   @include link(white);
 }
 
