--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,7 @@
 .header {
   display: flex;
+  padding-top: 10px;
+  padding-bottom: 17px;
   justify-content: space-between;
   align-items: center;
   background-color: $color__white;
