--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 0 20px 0;
+  margin: 0;
 }
 
 @media (min-width: $tablet-width)/* and (max-width: $desktop-width)*/ {
@@ -18,6 +20,12 @@
 .promo__title {
   color: $color__white;
   text-align: center;
+  font-weight: 400;
+  padding: 27px 20px 26px 20px;
+  margin: 0;
+
+  @include adaptive-font(36, 60);
+  @include line-height(36, 36, 60, 60);
 }
 
 @media (min-width: $tablet-width) {
@@ -28,6 +36,12 @@
 
 .promo__text {
   color: $color__white;
+  margin-top: 0;
+  margin-bottom: 29px;
+  text-transform: uppercase;
+
+  @include adaptive-font(14, 20);
+  @include line-height(14, 14, 20, 20);
 }
 
 @media (min-width: $tablet-width) {
@@ -48,6 +62,9 @@
   }
 }
 
-.promo__button {
-  justify-content: flex-start;
+.promo__link {
+  box-sizing: border-box;
+  /*  padding-top: 10px;
+  padding-bottom: 7px;*/
+  width: 88%;
 }
