--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -29,3 +29,7 @@ $desktop-width: 1300px;
 //fonts
 $font__main: "Oswald", sans-serif;
 $font__standard: "Arial", sans-serif;
+
+//font-size default, copy on mixins.scss
+$font-mobi: 14;
+$font-default: 16;
