--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,9 @@
 .catalog__title {
   padding: 0 20px;
+  font-weight: 400;
+
+  @include line-height(36,36,60,60);
+  @include  font-size(36,60);
 }
 
 @media (max-width: $tablet-width) {
