--- a/source/sass/blocks/main-link.scss
+++ b/source/sass/blocks/main-link.scss
@@ -9,7 +9,7 @@
   padding-top: 13px;
   padding-bottom: 13px;
 
-  @include adaptive-font(14,20);
+  @include font-size(14,20);
   @include line-height(14,18,20,20);
   @include link(white);
 }
