--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,17 +3,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 0 20px 0;
-  margin: 0;
+  max-width: $desktop-width;
 }
 
 @media (min-width: $tablet-width)/* and (max-width: $desktop-width)*/ {
   .promo {
     align-items: flex-start;
-    width: 53.9%;
     height: 400px;
+    box-sizing: border-box;
     padding-top: 30px;
-    margin: 0 auto 0 0;
   }
 }
 
@@ -21,16 +19,17 @@
   color: $color__white;
   text-align: center;
   font-weight: 400;
-  padding: 27px 20px 26px 20px;
-  margin: 0;
+  margin: 27px 0 25px 0;
 
-  @include adaptive-font(36, 60);
+  @include font-size(36, 60);
   @include line-height(36, 36, 60, 60);
 }
 
 @media (min-width: $tablet-width) {
   .promo__title {
     color: $color__black;
+    text-align: left;
+    width: 50%;
   }
 }
 
@@ -40,7 +39,7 @@
   margin-bottom: 29px;
   text-transform: uppercase;
 
-  @include adaptive-font(14, 20);
+  @include font-size(14, 20);
   @include line-height(14, 14, 20, 20);
 }
 
@@ -66,5 +65,14 @@
   box-sizing: border-box;
   /*  padding-top: 10px;
   padding-bottom: 7px;*/
-  width: 88%;
+  width: 100%;
+}
+
+@media (min-width: $tablet_width) {
+  .promo__link {
+    box-sizing: border-box;
+    /*  padding-top: 10px;
+    padding-bottom: 7px;*/
+    width: 38%;
+  }
 }
