--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -31,5 +31,5 @@ $font__main: "Oswald", sans-serif;
 $font__standard: "Arial", sans-serif;
 
 //font-size default, copy on mixins.scss
-$font-mobi: 14;
-$font-default: 16;
+$font-mobi-size: 14;
+$font-default-size: 16;
