--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,7 +22,8 @@
 @import "./blocks/demo.scss";
 @import "./blocks/demo-inner.scss";
 @import "./blocks/demo-cat.scss";
-@import "./blocks/slider-images.scss";
+@import "./blocks/demo-slider.scss";
+@import "blocks/demo-slider";
 @import "./blocks/control.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/contacts-outer.scss";
