--- a/source/sass/blocks/academy-logo.scss
+++ b/source/sass/blocks/academy-logo.scss
@@ -4,4 +4,7 @@
   justify-content: space-between;
   text-decoration: none;
   color: $color__dark-grey;
+  font-family: $font__standard;
+  font-size: 16px;
+  line-height: 18.4px;
 }
