--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -21,6 +21,9 @@
   line-height: 40px;
   cursor: pointer;
   width: 49px;
+
+  @include line-height(16,20,20,29.64);
+  @include font-size(16,20);
 }
 
 .control__bar {
@@ -43,7 +46,7 @@
 
 .control__range {
   position: relative;
-  top: -7px;
+  top: -12px;
   left: 4px;
   width: 36px;
   height: 6px;
