--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
+
+  @include line-height(16,18,20,29.64);
+  @include font-size(16,20);
 }
 
 .form__section {
@@ -20,6 +23,9 @@
 .form input,
 .form textarea {
   text-transform: uppercase;
+  font-family: $font__main;
+  font-size: 1rem;
+  line-height: 18px;
 }
 
 .form__submit {
