--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -6,18 +6,21 @@
   margin: 0;
   padding: 0;
   font-family: "Oswald", sans-serif;
-/*  font-size: 14px;*/
   font-weight: 400;
+}
+
+@media (max-width: $tablet-width) {
+  .page__body {
+    font-size: $font_mobi-size;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .page__body {
+    font-size: $font_default-size;
+  }
 }
 
 .page__main {
   flex: 1;
 }
-
-/*
-@media (min-width: $tablet-width) {
-  .page__body {
-    font-size: 16px;
-  }
-}
-*/
