--- a/source/sass/blocks/workflow.scss
+++ b/source/sass/blocks/workflow.scss
@@ -1,3 +1,10 @@
+.workflow__title {
+  font-weight: 400;
+
+  @include line-height(36,40,60,60);
+  @include font-size(36,60);
+}
+
 .workflow__list {
   display: grid;
   counter-reset: li;
@@ -35,6 +42,10 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  font-family: $font__standard;
+
+  @include line-height(14,18,16,24);
+  @include font-size(14,16);
 
   &::before {
     display: block;
