--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -10,13 +10,16 @@
   color: $link-color;
 }
 
-/*adaptive font on px*/
-@mixin adaptive-font($mobile, $pc) {
-  $desktop-width: 1300;
-  $addSize: $pc - $mobile;
-  $maxWidth: $desktop-width - 320;
+/*adaptive for mobile and other width*/
+@mixin font-size($mobile, $pc) {
 
-  font-size: calc(#{$mobile + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
+  @media (max-width: $tablet-width) {
+    font-size: ($mobile / $font-default-size) +rem;
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: ($pc / $font-default-size) + rem;
+  }
 }
 
 @mixin line-height($mobileFont, $mobileLh, $pcFont, $pcLh) {
