шрифты для всех страниц

--- a/source/sass/blocks/academy-logo.scss
+++ b/source/sass/blocks/academy-logo.scss
@@ -1,5 +1,6 @@
 .academy-logo {
   display: flex;
+  padding-top: 22px;
   align-items: center;
   justify-content: space-between;
   text-decoration: none;
