--- a/source/sass/blocks/footer-logo.scss
+++ b/source/sass/blocks/footer-logo.scss
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: center;
 }
+
+@media (max-width: $tablet-width) {
+  .footer-logo {
+    padding-bottom: 31px;
+  }
+}
