--- a/source/sass/blocks/additives.scss
+++ b/source/sass/blocks/additives.scss
@@ -8,7 +8,7 @@
     z-index: -1;
     display: block;
     padding: 0;
-    width: 90%;
+    width: 100vw;
     height: 2px;
     content: "";
     background-color: $color__green;
@@ -54,5 +54,14 @@
 @media (min-width: $tablet-width) and(max-width: $desktop-width) {
   .additives__title {
     padding-left: 20px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .additives__title {
+    position: relative;
+    left: -30px;
+
+    padding-left: 30px;
   }
 }
