--- a/source/sass/blocks/product-block.scss
+++ b/source/sass/blocks/product-block.scss
@@ -35,13 +35,12 @@
   border: 2px solid $color__grey;
 }
 
-@media (min-width: $tablet-width) {
+@media (max-width: $tablet-width) {
   .product-block--more {
     border: 2px solid $color__grey;
   }
 }
 
-.product-block--more,
-.product-block__title {
+.product-block__title--more {
   text-transform: uppercase;
 }
