--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -39,7 +39,7 @@
 @import "./blocks/product-block-outer.scss";
 @import "./blocks/product-block.scss";
 @import "./blocks/additives.scss";
-@import "./blocks/additive-wrapper";
+@import "./blocks/addons.scss";
 @import "./blocks/additive.scss";
 @import "./blocks/stock.scss";
 @import "./blocks/main-form.scss";
