--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,4 +1,5 @@
 .catalog__title {
+  grid-column: 1 / -1;
   padding: 0 20px;
   font-weight: 400;
 
@@ -13,8 +14,16 @@
   }
 }
 
+/*
 @media (min-width: $tablet-width) and (max-width: $desktop-width) {
   .catalog__title {
     padding: 0 30px;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .catalog__title {
+    padding: 0 40px;
+  }
+}
+*/
