--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -1,7 +1,18 @@
 .program {
+  position: relative;
+  box-sizing: border-box;
   background-color: $color__grey;
-  height: 260px;
-  row-gap: 20px;
+
+  &::after {
+    position: absolute;
+    top: 93%;
+    left: 0;
+    display: block;
+    width: 106%;
+    height: 1px;
+    background-color: #d9d9d9;
+    content: "";
+  }
 }
 
 @media (min-width: $tablet-width) and (max-width: $desktop-width) {
@@ -18,10 +29,21 @@
   }
 }
 
+.program--slim {
+  padding: 30px 33px 12px 19px;
+}
+
+.program--fat {
+  padding: 25px 33px 12px 19px;
+}
+
 .program__title {
   position: relative;
   display: flex;
-  padding-left: 28.5%;
+  padding-left: 72px;
+  padding-right: 5%;
+  box-sizing: border-box;
+
   margin: 0;
   align-items: center;
   text-transform: uppercase;
@@ -33,8 +55,8 @@
 
   &::before {
     position: absolute;
-    top: 0;
-    left: 8%;
+    top: -6px;
+    left: 3px;
     display: block;
     width: 50px;
     height: 50px;
@@ -46,8 +68,8 @@
 
 .program__title--slim::after {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -9px;
+  left: 10px;
   display: block;
   width: 36px;
   height: 50px;
@@ -57,8 +79,8 @@
 
 .program__title--fat::after {
   position: absolute;
-  top: 10px;
-  left: -20px;
+  top: 5px;
+  left: -6px;
   display: block;
   width: 67px;
   height: 28px;
@@ -103,6 +125,8 @@
 }
 
 .program__description {
+  padding: 29px 0 32px 0;
+  margin: 0;
   color: $color__dark-grey;
   font-family: $font__standard;
 
@@ -111,9 +135,13 @@
 }
 
 .program__link {
+  padding: 10px 5px 10px 0;
+  display: block;
+  box-sizing: border-box;
+  width: 45%;
   text-transform: uppercase;
 
-  @include font-size(14,16);
+  @include font-size(16,20);
   @include line-height(16,16,20,29.6);
   @include link($color__black);
 }
