--- a/source/sass/blocks/promo-outer.scss
+++ b/source/sass/blocks/promo-outer.scss
@@ -1,6 +1,6 @@
 .promo-outer {
-
-  background-image: linear-gradient(to top, #ffffff 195px, transparent 195px), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
+  padding-bottom: 20px;
+  background-image: linear-gradient(to top, #ffffff 198px, transparent 198px), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
   background-repeat: no-repeat;
   background-color: #29530f;
   background-position: 50% 0;
