--- a/source/sass/blocks/workflow.scss
+++ b/source/sass/blocks/workflow.scss
@@ -1,4 +1,10 @@
+.workflow {
+  padding-top: 13px;
+}
+
 .workflow__title {
+  padding: 0;
+  margin: 0 0 41px 0;
   font-weight: 400;
 
   @include line-height(36, 40, 60, 60);
@@ -79,7 +85,7 @@
     display: block;
     box-sizing: border-box;
     padding-left: 80px;
-    padding-bottom: 20px;
+    padding-top: 3px;
     min-height: 60px;
 
     &::before {
